// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly (1 coin, 1 rating) 1`] = `
<View
  style={
    Object {
      "height": 293.48,
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "#B3B3B3",
        "borderBottomWidth": 0.05,
        "borderTopColor": "#B3B3B3",
        "borderTopWidth": 0.25,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": "2%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "70%",
          "justifyContent": "space-evenly",
          "width": "100%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "borderRadius": 4,
            "height": 200.1,
            "width": 200.1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "96%",
            "justifyContent": "flex-start",
            "width": "61%",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#404040",
              "flexWrap": "nowrap",
              "fontFamily": "Ubuntu-Bold",
              "fontSize": 20,
              "height": 45,
            }
          }
        >
          name
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingVertical": 7,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 3,
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "flex-end",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          Location: 
          location
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          time
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#d68c6c",
          "borderRadius": 20,
          "bottom": 10,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "space-evenly",
          "position": "absolute",
          "right": 10,
          "width": 105.00000000000001,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Ubuntu-Bold",
            "fontSize": 14,
            "marginTop": "2%",
          }
        }
      >
        1.0
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 2 (2 coins, 3 rating) 1`] = `
<View
  style={
    Object {
      "height": 293.48,
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "#B3B3B3",
        "borderBottomWidth": 0.05,
        "borderTopColor": "#B3B3B3",
        "borderTopWidth": 0.25,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": "2%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "70%",
          "justifyContent": "space-evenly",
          "width": "100%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "borderRadius": 4,
            "height": 200.1,
            "width": 200.1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "96%",
            "justifyContent": "flex-start",
            "width": "61%",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#404040",
              "flexWrap": "nowrap",
              "fontFamily": "Ubuntu-Bold",
              "fontSize": 20,
              "height": 45,
            }
          }
        >
          name
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingVertical": 7,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 3,
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "flex-end",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          Location: 
          location
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          time
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffbf00",
          "borderRadius": 20,
          "bottom": 10,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "space-evenly",
          "position": "absolute",
          "right": 10,
          "width": 105.00000000000001,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Ubuntu-Bold",
            "fontSize": 14,
            "marginTop": "2%",
          }
        }
      >
        3.0
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 3 (3 coins, 5 rating) 1`] = `
<View
  style={
    Object {
      "height": 293.48,
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "#B3B3B3",
        "borderBottomWidth": 0.05,
        "borderTopColor": "#B3B3B3",
        "borderTopWidth": 0.25,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": "2%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "70%",
          "justifyContent": "space-evenly",
          "width": "100%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "borderRadius": 4,
            "height": 200.1,
            "width": 200.1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "96%",
            "justifyContent": "flex-start",
            "width": "61%",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#404040",
              "flexWrap": "nowrap",
              "fontFamily": "Ubuntu-Bold",
              "fontSize": 20,
              "height": 45,
            }
          }
        >
          name
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingVertical": 7,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 3,
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "flex-end",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 45,
                  "width": 45,
                }
              }
            />
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          Location: 
          location
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#a0a0a0",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "paddingVertical": "2%",
            }
          }
        >
          time
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#66b58c",
          "borderRadius": 20,
          "bottom": 10,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "space-evenly",
          "position": "absolute",
          "right": 10,
          "width": 105.00000000000001,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Ubuntu-Bold",
            "fontSize": 14,
            "marginTop": "2%",
          }
        }
      >
        5.0
      </Text>
    </View>
  </View>
</View>
`;
